apps/lychee/lychee.yaml
apiVersion: v1
kind: Service
metadata:
  name: lychee
  namespace: lychee
spec:
  ports:
  - name: web
    port: 80
  selector:
    app: lychee
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: lychee
  name: lychee
  namespace: lychee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lychee
  serviceName: lychee
  template:
    metadata:
      labels:
        app: lychee
    spec:
      containers:
      - image: docker.io/lycheeorg/lychee:latest
        name: lychee
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
          - name: lychee-conf
            mountPath: /conf
          - name: lychee-uploads
            mountPath: /uploads
          - name: lychee-sym
            mountPath: /sym
      volumes:
        - name: lychee-conf
          persistentVolumeClaim:
            claimName: lychee-conf
        - name: lychee-uploads
          persistentVolumeClaim:
            claimName: lychee-uploads
        - name: lychee-sym
          persistentVolumeClaim:
            claimName: lychee-sym
